Update bundle and minification to generate minified files into a bundles folder on build

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Don't include bundled files in git
+**/wwwroot/bundles
