--- a/PGDevOpsTips.Web/bundleconfig.json
+++ b/PGDevOpsTips.Web/bundleconfig.json
@@ -1,6 +1,6 @@
 [
   {
-    "outputFileName": "wwwroot/css/site.min.css",
+    "outputFileName": "wwwroot/bundles/site.min.css",
     // An array of relative input file paths. Globbing patterns supported
     "inputFiles": [
       "wwwroot/css/bootstrap/bootstrap.min.css",
@@ -17,7 +17,7 @@
     ]
   },
   {
-    "outputFileName": "wwwroot/js/site.min.js",
+    "outputFileName": "wwwroot/bundles/site.min.js",
     "inputFiles": [
       "wwwroot/font-awesome/js/all.min.js"
     ],
