--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       
     # changes the base-tag in index.html from '/' to 'PGDevOpsTips' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to PGDevOpsTips
-      run: sed -i 's/<base href="\/" \/>/<base href="\/PGDevOpsTips\/" \/>/g' ${{ env.PUBLISH_DIR }}
+      run: sed -i 's/<base href="\/" \/>/<base href="\/PGDevOpsTips\/" \/>/g' PGDevOpsTips.Web/bin/Release/net5.0/publish/wwwroot/index.html
     
     - name: GitHub Pages
       if: success()
