--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,13 @@ jobs:
     - name: Publish app
       run: dotnet publish -c Release
       
-    # changes the base-tag in index.html from '/' to 'PGDevOpsTips' to match GitHub Pages repository subdirectory
+    # Changes the base-tag in index.html from '/' to 'PGDevOpsTips' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to PGDevOpsTips
       run: sed -i 's/<base href="\/" \/>/<base href="\/PGDevOpsTips\/" \/>/g' PGDevOpsTips.Web/bin/Release/net5.0/publish/wwwroot/index.html
+    
+    # Allow files and folders starting with an underscore
+    - name: Add .nojekyll file
+      run: touch release/wwwroot/.nojekyll
     
     - name: GitHub Pages
       if: success()
