Move CNAME to pgdevopstips.web root

--- a/PGDevOpsTips.Web/PGDevOpsTips.Web.csproj
+++ b/PGDevOpsTips.Web/PGDevOpsTips.Web.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\CNAME" />
+    <Content Include="CNAME" />
   </ItemGroup>
 
   <ItemGroup>
