update base path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
       with:
         html_path: ${{ env.PUBLISH_DIR }}/index.html
-        base_href: /PGDevOpsTips/
+        base_href: /PGDevOpsTips/PGDevOpsTips.Web/
     
     # Allow files and folders starting with an underscore
     - name: Add .nojekyll file
