--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Publish app
-      run: dotnet publish -c Release
+      run: dotnet publish -c Release PGDevOpsTips.Web
       
     # Changes the base-tag in index.html from '/' to 'PGDevOpsTips' to match GitHub Pages repository subdirectory
     #- name: Change base-tag in index.html from / to PGDevOpsTips
@@ -23,7 +23,7 @@ jobs:
       uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
       with:
         html_path: ${{ env.PUBLISH_DIR }}/index.html
-        base_href: https://www.pgdevopstips.co.uk
+        base_href: /PGDevOpsTips.Web/
     
     # Allow files and folders starting with an underscore
     - name: Add .nojekyll file
