Update unit testing project to use PGDevOpsTips.Workflow project

--- a/PGDevOpsTips.UnitTest/PGDevOpsTips.UnitTest.csproj
+++ b/PGDevOpsTips.UnitTest/PGDevOpsTips.UnitTest.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PGDevOpsTips.Web\PGDevOpsTips.Web.csproj" />
+    <ProjectReference Include="..\PGDevOpsTips.Workflow\PGDevOpsTips.Workflow.csproj" />
   </ItemGroup>
 
 </Project>
