--- a/PGDevOpsTips.Web/PGDevOpsTips.Web.csproj
+++ b/PGDevOpsTips.Web/PGDevOpsTips.Web.csproj
@@ -37,5 +37,9 @@
     <PackageReference Include="System.Net.Http.Json" Version="6.0.1" />
     <PackageReference Include="YamlDotNet" Version="13.0.2" />
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <ProjectReference Include="..\PGDevOpsTips.Domain\PGDevOpsTips.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
