--- a/PGDevOpsTips.Web/wwwroot/appsettings.json
+++ b/PGDevOpsTips.Web/wwwroot/appsettings.json
@@ -7,7 +7,7 @@
     "TwitterUrl": "https://twitter.com/twoGsdev",
     "TwitterHandle": "@twoGsdev",
     //TODO: Fix
-    "LinkedInUrl": "https://www.linkedin.com/in/%F0%9F%92%BBpeter-g-36b39b26/",
+    "LinkedInUrl": "https://www.linkedin.com/in/%F0%9F%92%BBpeter-g-36b39b26",
     "SkypeHandle": null,
     "GitHubUrl": "https://github.com/petergregg",
     "StackOverflowUrl": "https://stackoverflow.com/users/2387645/pgtips",
