--- a/.github/workflows/main-prerender-react-snap.yml
+++ b/.github/workflows/main-prerender-react-snap.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy-to-github-pages:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04.02
     steps:
     - uses: actions/checkout@v2
     
