Add copy command to copy index.html to 404.html

--- a/.github/workflows/main-prerender-react-snap.yml
+++ b/.github/workflows/main-prerender-react-snap.yml
@@ -28,6 +28,10 @@ jobs:
             #sed -i 's/<base href="\/"/<base href="\/PGDevOpsTips\/"/g' $htmlFile
             sed -i 's/<script type="text\/javascript">var Module; window.__wasmmodulecallback__(); delete window.__wasmmodulecallback__;<\/script><script src="_framework\/dotnet.6.0.24.t14qolxptp.js" defer="" integrity="sha256-0zvLbm2N57A5LNSoUWIIMXXq7ldIwes8W5WY9\/G84GE=" crossorigin="anonymous"><\/script>//g' $htmlFile
         done
+    
+    # copy index.html to 404.html to serve the same file when a file is not found
+    - name: copy index.html to 404.html
+      run: cp Prerender/output/wwwroot/index.html Prerender/output/wwwroot/404.html
 
     # Allow files and folders starting with an underscore
     - name: Add .nojekyll file
