Updated dotnet version in scripts to be removed from prerendered .html

--- a/.github/workflows/main-prerender-react-snap.yml
+++ b/.github/workflows/main-prerender-react-snap.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         find . -name "*.html" | while read htmlFile; do
             #sed -i 's/<base href="\/"/<base href="\/PGDevOpsTips\/"/g' $htmlFile
-            sed -i 's/<script type="text\/javascript">var Module; window.__wasmmodulecallback__(); delete window.__wasmmodulecallback__;<\/script><script src="_framework\/dotnet.6.0.24.t14qolxptp.js" defer="" integrity="sha256-0zvLbm2N57A5LNSoUWIIMXXq7ldIwes8W5WY9\/G84GE=" crossorigin="anonymous"><\/script>//g' $htmlFile
+            sed -i 's/<script type="text\/javascript">var Module; window.__wasmmodulecallback__(); delete window.__wasmmodulecallback__;<\/script><script src="_framework\/dotnet.6.0.25.0ibdzzkyii.js" defer="" integrity="sha256-1jUGCCSGH9JWhkqbHdQk8JBjBI8K\/VC63En5zlypVps=" crossorigin="anonymous"><\/script>//g' $htmlFile
         done
     
     # copy index.html to 404.html to serve the same file when a file is not found
@@ -45,4 +45,3 @@ jobs:
         build_dir: ${{ env.PUBLISH_DIR }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
-    
