Add folder into find

--- a/.github/workflows/main-prerender-react-snap.yml
+++ b/.github/workflows/main-prerender-react-snap.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Change base tag
       working-directory: Prerender/output/wwwroot
       run: |
-        find . -name "*.html" | while read htmlFile; do
+        find .\/ -name "*.html" | while read htmlFile; do
             #sed -i 's/<base href="\/"/<base href="\/PGDevOpsTips\/"/g' $htmlFile
             sed -i 's/<script type="text\/javascript">var Module; window.__wasmmodulecallback__(); delete window.__wasmmodulecallback__;<\/script><script src="_framework\/dotnet.6.0.25.0ibdzzkyii.js" defer="" integrity="sha256-1jUGCCSGH9JWhkqbHdQk8JBjBI8K\/VC63En5zlypVps=" crossorigin="anonymous"><\/script>//g' $htmlFile
         done
