--- a/.github/workflows/main-prerender-react-snap.yml
+++ b/.github/workflows/main-prerender-react-snap.yml
@@ -25,8 +25,7 @@ jobs:
       #working-directory: Prerender/output/wwwroot
       run: |
         find .\/Prerender\/output\/wwwroot\/ -name "*.html" | while read htmlFile; do
-            #sed -i 's/<base href="\/"/<base href="\/PGDevOpsTips\/"/g' $htmlFile
-            sed -i 's/<script type="text\/javascript">var Module; window.__wasmmodulecallback__(); delete window.__wasmmodulecallback__;<\/script><script src="_framework\/dotnet.6.0.25.0ibdzzkyii.js" defer="" integrity="sha256-1jUGCCSGH9JWhkqbHdQk8JBjBI8K\/VC63En5zlypVps=" crossorigin="anonymous"><\/script>//g' $htmlFile
+            sed -i 's/<script type="text\/javascript">var Module; window.__wasmmodulecallback__(); delete window.__wasmmodulecallback__;<\/script>//g' $htmlFile
         done
     
     # copy index.html to 404.html to serve the same file when a file is not found
