--- a/.github/workflows/main-prerender-react-snap.yml
+++ b/.github/workflows/main-prerender-react-snap.yml
@@ -22,10 +22,10 @@ jobs:
 
     # change base tag in all html files to include subfolder
     - name: Change base tag
-      #working-directory: Prerender/output/wwwroot
+      working-directory: Prerender/output/wwwroot
       run: |
-        find .\/Prerender\/output\/wwwroot\/ -name "*.html" | while read htmlFile; do
-            sed -i 's/<script type="text\/javascript">var Module; window.__wasmmodulecallback__(); delete window.__wasmmodulecallback__;<\/script>//g' $htmlFile
+        find . -name "*.html" | while read htmlFile; do
+            sed -i 's/<script>var Module; window.__wasmmodulecallback__(); delete window.__wasmmodulecallback__;<\/script>//g' $htmlFile
         done
     
     # copy index.html to 404.html to serve the same file when a file is not found
