Set fetch-depth to 0 for the checkout action to ensure that the generate-sitemap action has access to the commit history, which is used for generating the <lastmod> tags in the sitemap.xml file. Update sitemap path

--- a/.github/workflows/main-prerender-react-snap.yml
+++ b/.github/workflows/main-prerender-react-snap.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     
     - name: Publish app
       run: dotnet publish PGDevOpsTips.Web/PGDevOpsTips.Web.csproj -c Release -o Prerender/output --nologo
@@ -36,6 +38,7 @@ jobs:
       id: sitemap
       uses: cicirello/generate-sitemap@v1
       with:
+        path-to-root: ./Prerender/output/wwwroot/
         base-url-path: https://www.pgdevopstips.co.uk/
     
     - name: Output stats
